# extract-photos-from-videos

./: .coverage  .gitignore  CLAUDE.md  README.md  extract-photos.spec  extract_photos.spec  hello.py  main.spec  pyproject.toml
.claude/: settings.json  settings.local.json
.githooks/: pre-commit
docs/: ARCHITECTURE.md  epm-control-flow.md  epm-sequence.md  python-pipeline.md
docs/callgraph-manual/: README.md
docs/callgraph-pyan/: README.md  callgraph.dot
docs/callgraph-pyreverse/: README.md  classes_extract_photos.dot  packages_extract_photos.dot
extract_photos/: batch_processor.py  borders.py  copy_to_nfs.py  display_progress.py  extract.py  immich.py  main.py  transcode_playback.py  utils.py
test-video/: edge-cases.txt
test-videos/test-video-5/: photo-timestamps.txt
tests/: test_batch_processor.py  test_borders.py  test_display_progress.py  test_epm.sh  test_extract.py  test_immich.py  test_utils.py  test_video_integration.py
