[project]
name = "extract-photos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.1",
    "opencv-python>=4.11.0.86",
    "pyinstaller>=6.11.1",
    "scikit-image>=0.25.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
line-length = 120
max-line-length = 120

[tool.flake8]
max-line-length = 120
ignore = ["E203"]  # Ignore 'whitespace before ":"'

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "--cov=extract_photos --cov-report=term-missing"

[tool.coverage.run]
source = ["extract_photos"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
